--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>I want every page to have this stuff</h1>
+    {% include 'navbar.html' %}
   <main>
     {% block content %}
     {% endblock %}
