--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
 <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li style="float:right"><a class="active" href="#about">About</a></li>
+    <li><a href="">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/admin">Admin</a></li>
+
   </ul>
   
