--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,6 +3,7 @@
     <li><a href="/about">About</a></li>
     <li><a href="/contact">Contact</a></li>
     <li><a href="/product">Product</a></li>
+    <li><a href="/product/create">Create Product</a></li>
     <li><a href="/admin">Admin</a></li>
   </ul>
   
